--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,12 @@ license = "Apache-2.0"
 authors = ["Nanaka Hiira"]
 
 [dependencies]
+alloy-primitives = "0.6.3"
 alloy-signer = { git = "https://github.com/alloy-rs/alloy", features = ["mnemonic"]}
 clap = { version = "4.5.0", features = ["derive"] }
 coins-bip32 = "0.8.7"
 coins-bip39 = "0.8.7"
+hex = "0.4.3"
 num_cpus = "1.16.0"
 rand = "0.8.5"
 regex = "1.10.3"
