--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,13 +15,13 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          - release_for: Linux-x86_64-gnu
+          - release_for: Linux-x86_64
             os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             ext: ""
             command: build
 
-          - release_for: Linux-aarch64-gnu
+          - release_for: Linux-aarch64
             os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
             ext: ""
