--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,12 @@
 name = "ccid-tools"
 version = "0.2.4"
 edition = "2021"
+repository = "https://github.com/7ka-Hiira/ccid-tools"
 description = "Tools for working with CCID"
 license = "Apache-2.0"
 authors = ["Nanaka Hiira"]
+keywords = ["concurrent", "ccid", "vanity", "brute-force"]
+categories = ["cryptography", "command-line-utilities", "concurrency"]
 
 [dependencies]
 alloy-primitives = "0.6.3"
