--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ categories = ["cryptography", "command-line-utilities", "concurrency"]
 
 [dependencies]
 alloy-primitives = "0.6.3"
+bech32 = "0.11.0"
 clap = { version = "4.5.0", features = ["derive"] }
 coins-bip32 = "0.8.7"
 coins-bip39 = "0.8.7"
@@ -20,4 +21,7 @@ num_cpus = "1.16.0"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 regex = "1.10.3"
+ripemd = "0.1.3"
+secp256k1 = "0.29.0"
+sha256 = "1.5.0"
 unicode-normalization = "0.1.22"
