--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ keywords = ["concurrent", "ccid", "vanity", "brute-force"]
 categories = ["cryptography", "command-line-utilities", "concurrency"]
 
 [dependencies]
-alloy-primitives = "0.6.3"
+alloy-primitives = "0.7"
 bech32 = "0.11.0"
 clap = { version = "4.5.0", features = ["derive"] }
 coins-bip32 = "0.8.7"
@@ -23,5 +23,6 @@ rand_chacha = "0.3.1"
 regex = "1.10.3"
 ripemd = "0.1.3"
 secp256k1 = "0.29.0"
+sha2 = { version = "0.10.8", features = ["compress"] }
 sha256 = "1.5.0"
 unicode-normalization = "0.1.22"
