--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ keywords = ["concurrent", "ccid", "vanity", "brute-force"]
 categories = ["cryptography", "command-line-utilities", "concurrency"]
 
 [dependencies]
+# たぶんまとめられる (todo)
 alloy-primitives = "0.7"
 bech32 = "0.11.0"
 clap = { version = "4.5.0", features = ["derive"] }
@@ -23,6 +24,5 @@ rand_chacha = "0.3.1"
 regex = "1.10.3"
 ripemd = "0.1.3"
 secp256k1 = "0.29.0"
-sha2 = { version = "0.10.8", features = ["compress"] }
-sha256 = "1.5.0"
+sha2 = "0.10.8"
 unicode-normalization = "0.1.22"
