--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,15 +3,13 @@ name = "ccid-tools"
 version = "0.3.0"
 edition = "2021"
 repository = "https://github.com/7ka-Hiira/ccid-tools"
-description = "Tools for working with CCID"
+description = "A Concurrent CCID management tool"
 license = "Apache-2.0"
 authors = ["Nanaka Hiira"]
 keywords = ["concurrent", "ccid", "vanity", "brute-force"]
 categories = ["cryptography", "command-line-utilities", "concurrency"]
 
 [dependencies]
-# たぶんまとめられる (todo)
-alloy-primitives = "0.7"
 bech32 = "0.11.0"
 clap = { version = "4.5.0", features = ["derive"] }
 coins-bip32 = "0.8.7"
