--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ccid-tools"
-version = "0.3.2"
+version = "0.4.0"
 edition = "2021"
 repository = "https://github.com/7ka-Hiira/ccid-tools"
 description = "A Concurrent CCID management tool"
@@ -26,4 +26,5 @@ sha2 = "0.10.8"
 unicode-normalization = "0.1.22"
 
 [profile.release]
-lto = "thin"
+lto = "fat"
+opt-level = 3
